# network-vs-atoll

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
network_vs_atoll/: __init__.py  excel.py  filter_data.py  main.py  report.py  select_data.py  send_mail.py
network_vs_atoll/scripts/: main.py
tests/: conftest.py  test_excel.py  test_filter_data.py  test_report.py  test_select_data.py
tests/reports/: network-vs-atoll.xlsx
